# TimesSeriesAgent

./: .env  .gitignore  README.md  pyproject.toml
data/: cluster_brent.csv  cluster_exxo34.csv  cluster_motivos.csv  cluster_petr4.csv  cluster_prio3.csv  dados_acao_BZ=F.csv  dados_acao_BZ=F_5y.csv  dados_acao_EXXO34.SA_5y.csv  dados_acao_PETR4.SA.csv  dados_acao_PETR4.SA_5y.csv  dados_acao_PRIO3.SA_5y.csv  dados_acao_USDBRL=X.csv  dados_acao_USDBRL=X_5y.csv  dados_combinados.csv  dados_exxo34_brent.csv  dados_multiativo.csv  dados_petr4_brent.csv  dados_prio3_brent.csv  embeddings_frases_meta.csv  fechamentos.csv  frases_impacto_clusters.csv  impact_library_embeddings.npy  impact_library_meta.csv  previsao_impacto_final.csv  resultado_comparacao_modelos.csv  resumo_clusters.csv  simulacao_futura.csv  simulacao_futura_131415.csv  simulacao_futura_A.csv  variacao_acao_BZ=F.csv  variacao_acao_PETR4.SA.csv  variacao_acao_USDBRL=X.csv
eval/: .env  comparar_modelos.py  comparar_todos_modelos.py  hybrid_core.py  impact_integration.py  modelo_hibrido_ensemble_ativo.py  modelo_hibrido_eval.py  modelo_hibrido_eval_ativo.py  modelo_hibrido_eval_autoencoder_ativo.py  modelo_hibrido_offline.py  modelo_hibrido_ridge_ativo.py  plotter_refactor.py  resultado_hibrido_eval_ativo.txt
evaluation/: avaliador_multi.py
hybrid/: hibrido.py  noticias.py
modelos/: autoencoder_exxo34.pt  autoencoder_petr4.pt  autoencoder_prio3.pt  embeddings_frases_meta.csv  impact_predictor.py  impact_predictor_PETR4.pt  impact_predictor_PRIO3.pt  lstm_ae_petr4_brent.pt  lstm_ae_prio3_brent.pt  (+11 more)
(+92 files in other folders)
