[project]
name = "timesseriesagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "statsmodels>=0.14.5",
    "torch>=2.9.0",
    "yfinance>=0.2.66",
]
